--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@langchain/community": "^0.3.42",
     "@langchain/openai": "^0.5.10",
@@ -26,5 +26,6 @@
     "pdf2pic": "^3.1.4",
     "string-similarity": "^4.0.4",
     "tesseract.js": "^6.0.1"
-  }
+  },
+  "description": ""
 }
